# habit-maker

./: .vercelignore  README.md  habit-data.csv  htmx-agent.skill  pyproject.toml  python-fastapi-agent.skill  requirements.txt  vercel.json
.claude/agents/: fastapi-implementer.md  fastapi-planner.md  fastapi-reviewer.md
.claude/skills/deploy-fastapi-vercel/: SKILL.md
backend/: auth.py  db.py  habit_maker.db  main.py  timer_service.py
backend/cruds/: main.py
backend/models/: main.py
backend/routers/: main.py
backend/shcemas/: main.py
backend/templates/: base.html  login.html  page1.html  page2.html  register.html
backend/templates/partials/: calendar_bundle.html  calendar_section.html  diary_bundle.html  diary_section.html  habits_section.html  my_habits_section.html  page1_memo_section.html  page2_category_picker.html  page2_register_bundle.html  timer_section.html
backend/test/: -test_diary_backend.py  -test_timer_backend.py  -test_ui_frontend.py  test.py  test_habit_registration.py
project/agents/: README.md  htmx-agent.md  python-agent.md
project/agents/htmx-agent/: SKILL.md
project/agents/python-fastapi-agent/: SKILL.md
