[project]
name = "habit-maker"
version = "0.1.0"
description = "習慣化を支援するWebアプリ"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "aiosqlite",
    "asyncpg",
    "pydantic",
    "pydantic-settings",
    "jinja2",
    "pwdlib[argon2]",
    "pyjwt",
    "python-multipart",
]

[tool.vercel]
entrypoint = "backend.main:app"
